# vibe-heal

./: .env.vibeheal.example  .env.vibeheal.self  .gitignore  .gitmodules  .harness.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  README.md  _config.yml  mkdocs.yml  pyproject.toml  sonar-project.properties
.devcontainer/: devcontainer.json
.github/workflows/: main.yml
docs/: ARCHITECTURE.md  ROADMAP.md  branch-cleanup-guide.md  index.md  modules.md  review-guide.md
docs/feature-requests/: branch-cleanup.md
docs/phases/: PHASE_0_SETUP.md  PHASE_1_CONFIG.md  PHASE_2_SONARQUBE.md  PHASE_3_PROCESSOR.md  PHASE_4_AI_TOOLS.md  PHASE_5_GIT.md  PHASE_6_CLI.md  PHASE_7_SAFETY.md  README.md
docs/superpowers/plans/: 2026-05-11-review-command.md  2026-05-21-sonar-properties-file.md
docs/superpowers/specs/: 2026-05-11-copy-exclusion-settings-to-temp-project-design.md  2026-05-11-review-command-design.md  2026-05-21-sonar-properties-file-design.md
src/vibe_heal/: __init__.py  __main__.py  cli.py  models.py  orchestrator.py  output.py
src/vibe_heal/ai_tools/: __init__.py  aider.py  base.py  claude_code.py  external_docs.py  factory.py  gemini.py  models.py  opencode.py  prompts.py  utils.py
src/vibe_heal/cleanup/: __init__.py  orchestrator.py
src/vibe_heal/config/: __init__.py  exceptions.py  models.py  scanner_discovery.py
src/vibe_heal/converters/: __init__.py  oxlint.py
src/vibe_heal/deduplication/: __init__.py  client.py  models.py  orchestrator.py  processor.py
src/vibe_heal/git/: __init__.py  branch_analyzer.py  diff_parser.py  exceptions.py  manager.py
src/vibe_heal/processor/: __init__.py  issue_processor.py  models.py
src/vibe_heal/review/: __init__.py  github.py  line_filter.py  models.py  orchestrator.py  reporter.py
src/vibe_heal/sonarqube/: __init__.py  analysis_runner.py  client.py  exceptions.py  models.py  project_manager.py  properties_handler.py
src/vibe_heal/utils/: __init__.py
tests/: conftest.py  shared_orchestrator_tests.py  test_cli.py  test_foo.py  test_models.py  test_orchestrator.py  test_output.py  test_output_safety.py
tests/ai_tools/: test_aider.py  test_base.py  test_claude_code.py  test_external_docs.py  test_factory.py  test_gemini.py  test_models.py  test_opencode.py  test_prompts.py
tests/cleanup/: test_orchestrator.py
tests/config/: test_config_loading.py  test_models.py  test_scanner_discovery.py
tests/converters/: test_oxlint.py
tests/deduplication/: __init__.py  test_branch_orchestrator.py
tests/git/: test_branch_analyzer.py  test_diff_parser.py  test_manager.py
tests/processor/: test_issue_processor.py
tests/review/: __init__.py  test_github.py  test_line_filter.py  test_models.py  test_orchestrator.py  test_reporter.py
tests/sonarqube/: test_analysis_runner.py  test_client.py  test_models.py  test_project_manager.py  test_properties_handler.py  test_real_api_response.py
tests/vcs/: test_factory.py
(+13 files in other folders)
